Fix flexbox size on Firefox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,4 +15,5 @@ nav.navbar {
   flex-direction: column;
   flex: 1;
   width: 100%;
+  min-height: 0;
 }
